--- a/index.html
+++ b/index.html
@@ -1,104 +1,207 @@
-<html>
-  <style>
-body {
-  background-color: #282c34;
-  color: aliceblue;
-  font-family: sans-serif;
+<!DOCTYPE html>
+<style>
+  body {
+    background-color: #282c34;
+    color: aliceblue;
+    font-family: sans-serif;
+  }
+
+  input[type='url'],
+  textarea,
+  input[type='text'] {
+    margin: auto;
+    background-color: #44475a;
+    border: none;
+    border-radius: 1rem;
+    color: aliceblue;
+    padding: 8px;
+    width: 100%;
+  }
+
+  input[type='url']:focus,
+  textarea:focus,
+  input[type='text']:focus {
+    margin: auto;
+    box-shadow: 0 0 4px 2px #6272a4;
+  }
+
+  label {
+    margin: auto;
+    display: block;
+    font-size: 14px;
+    margin: 8px 0;
+  }
+
+  .submit {
+    margin-top: 16px;
+    text-align: center;
+  }
+
+  #message {
+    transform: translateY(-100%);
+    transition: transform 1s ease-in-out;
+  }
+
+  #message.visible {
+    transform: translateY(0);
+  }
+
+  .btn {
+    background-color: #4caf50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+
+  .btn:hover {
+    background-color: #45a049;
+  }
+
+  .hidden {
+    display: none;
+  }
+  .container {
+    max-width: 90%;
+    position: relative;
+    padding: auto;
+    left: 50%;
+    transform: translate(-50%);
+  }
+  h1{
+    position: relative;
+    text-align: center;
+  }
+
+
+  .param {
+    color: antiquewhite;
+    background-color: #36393e;
+    padding: 1rem;
+    -webkit-transition: 0.45s ease;
+    -o-transition: 0.45s ease;
+    transition: 0.45s ease;
+    border-radius: 1rem;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
 }
 
-input[type='url'], textarea, input[type='text'] {
-  background-color: #44475a;
-  border: none;
-  border-radius: 4px;
-  color: aliceblue;
-  padding: 8px;
-  width: 100%;
+.param:hover {
+    cursor: pointer;
+    -webkit-transform: scale(1.02);
+    -ms-transform: scale(1.02);
+    transform: scale(1.02);
 }
-
-input[type='url']:focus, textarea:focus, input[type='text']:focus {
-  box-shadow: 0 0 4px 2px #6272a4;
-}
-
-label {
-  display: block;
-  font-size: 14px;
-  margin: 8px 0;
-}
-
-.submit {
-  margin-top: 16px;
-  text-align: center;
-}
-
-
-
-
-
-.btn {
-  background-color: #4caf50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-.btn:hover {
-  background-color: #45a049;
-}
-
-  </style>
+</style>
 
 <body>
-  <label for="webhookurl" class="" >Webhook URL</label><input id="webhookurl" type="url" style="color: rgb(0, 0, 0)"> 
 
-  <label for="content">Message</label><textarea id="content" class="materialize-textarea" style="color: rgb(0, 0, 0)" maxlength="2000"></textarea>
-  <label for="webhookusername">Username</label><input id="webhookusername" type="text" style="color: rgb(0, 0, 0)" maxlength="32"> 
-  <label for="avatar_url">Avatar url </label><input id="avatar_url" type="url" style="color: rgb(0, 0, 0)"> 
+  <h1>WEBHOOK SENDER</h1>
+  <div class="container">
+    <label for="webhookurl" >Webhook URL</label>
+    <input id="webhookurl" type="url" style="color: rgb(0, 0, 0)">
+    <div>
+      <label for="content">Message</label>
+      <textarea id="content" class="materialize-textarea" style="color: rgb(0, 0, 0)" maxlength="2000"></textarea>
+    </div>
+    <div><a><br></a></div>
+    <details class="param">
+      <summary>webhook settings</summary>
+      <br>
+      <div id="webhook-param">
+        <div>
+          <label for="webhookusername">Username</label>
+          <input id="webhookusername" type="text" style="color: rgb(0, 0, 0)" maxlength="32">
+        </div>
+        <div>
+          <label for="avatar_url">Avatar url </label>
+          <input id="avatar_url" type="url" style="color: rgb(0, 0, 0)">
+        </div>
+      </div>
+    </details>
+    
 
 
-  
+    <div><a><br></a></div>
+
   <div class="submit" style="text-align: center;">
-    <a href="javascript:submit()" class="btn tooltipped" data-position="bottom" data-tooltip="Sending..."><i class="material-icons left"><i class="fas fa-paper-plane"></i></i>Send</a>
+    <a href="javascript:send()" class="btn">Send</a>
+  </div>
+  <br>
+  <div class="submit" style="text-align: center;">
+    <a href="javascript:delet()" style = "background-color:red;" class="btn">delete webhook</a>
+  </div>
+  <div id="message" class="hidden"><a class="btn">webhook sent succesfully!</a></div>
 </div>
 
-<script>
+  <script>
+    function showMessage() {
+      var message = document.getElementById('message');
+      message.classList.remove('hidden');
+      message.classList.add('visible');
+    }
+    function hideMessage() {
+      var message = document.getElementById('message');
+      message.classList.add('hidden');
+      message.classList.remove('visible');
+    }
 
-function submit() {
-  var url = document.getElementById('webhookurl');
-  var content = document.getElementById('content');
-  var username = document.getElementById('webhookusername');
-  var avatar_url = document.getElementById('avatar_url');
-  if (url == 0){
-    alert('Enter url!', 3000);
-  }else{
-    if (content == 0) {
-      alert('Enter a message!', 3000);
-    }else {
-      fetch(url, {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({content: content, username: username, avatar_url: avatar_url})
-      })
-      .then(response => {
-        if (response.ok) {
-          alert('Success', 3000);
-        } else {
-          throw new Error('Error');
-        }
-      })
-      .catch(error => {
-        alert('Error', 3000);
-      });
+    function delet() {
+  var url = document.getElementById('webhookurl').value;
+  const request = new XMLHttpRequest();
+  request.open('DELETE', url);
+  request.send();
+  request.onload = function() {
+    if (request.status != 200) {
+      alert("Webhook deleted successfully");
+    } else {
+      alert("There was an error deleting the webhook");
     }
   }
 }
 
+    function send() {
+      var url = document.getElementById('webhookurl');
+      var content = document.getElementById('content');
+      var username = document.getElementById('webhookusername');
+      var avatar_url = document.getElementById('avatar_url');
 
-</script>
+      const request = new XMLHttpRequest();
+
+      request.open("POST", url.value);
+
+      request.setRequestHeader('Content-type', 'application/json');
+
+      const params = {
+        "avatar_url": avatar_url.value,
+        "username": username.value,
+        "content": content.value
+      }
+      if (url.value == 0) {
+        alert("enter url!")
+      } else {
+        if (content.value == 0) {
+          alert('Enter a message!')
+        }
+        else
+          try {
+            request.send(JSON.stringify(params))
+            showMessage();
+            window.setTimeout(hideMessage, 1000);
+          } catch (error) {
+            console.error(error)
+            alert("Error sending webhook: " + error)
+          }
+      }
+
+    };
+  </script>
 </body>
+
 
 </html>
