Update and rename index.html to webhook.html

--- a/webhook.html
+++ b/webhook.html
@@ -1,4 +1,30 @@
 <!DOCTYPE html>
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="language" content="English">
+    <title>discord tools - webhook</title>
+  <!--websites embed-->
+    <meta name="theme-color" content="#47dc47">
+    <meta name="title" content="discord tools - webhook">
+    <meta name="description"
+        content="website page for discord webhook manipulation.">
+    <meta name="googlebot" content="index,follow" />
+    <meta name="author" content="spidirman#4534">
+    <meta name="copyright" content="spidirman#4534" />
+
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+    <meta property="og:url" content="https://discord-tools.vercel.app/webhook.html">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="discord-tools">
+    <meta property="og:title" content="discord tools - webhook">
+    <meta property="og:description"
+        content="website page for discord webhook manipulation.">
+    <meta property="og:image" content="http://dz2cdn1.dzone.com/storage/temp/14014987-webhooks-1.png">
+    <meta property="og:image:secure_url" content="https://dz2cdn1.dzone.com/storage/temp/14014987-webhooks-1.png" />
+</head>
 <style>
   body {
     background-color: #282c34;
